updated edit form and employee details

--- a/src/components/animal/AnimalForm.css
+++ b/src/components/animal/AnimalForm.css
@@ -8,7 +8,7 @@ fieldset {
     background: aliceblue;
 }
 
-fieldset input, fieldset button{
+fieldset input, fieldset button, fieldset select{
     box-sizing: border-box;
     padding: .2em .4em;
     margin: .2em 0;
@@ -49,7 +49,7 @@ fieldset .formgrid {
     align-items: center;
 }
 
-fieldset input, fieldset button {
+fieldset input, fieldset button, fieldset select {
     grid-column: 2 /4;
     width: auto;
     margin: 0
